change condition on enabling engraving

--- a/assets/timber.scss.liquid
+++ b/assets/timber.scss.liquid
@@ -3024,6 +3024,7 @@ $socialIconFontStackCustom: 'icons-custom';
 .product-single__meta--wrapper {
   padding-left: 45px;
   padding-right: 25px;
+  z-index: 1;
 }
 
 .product-single__meta {
