--- a/snippets/breadcrumbs.liquid
+++ b/snippets/breadcrumbs.liquid
@@ -62,8 +62,15 @@ $( document ).ready(function() {
         console.log(window.COLLECTION_HANDLE);
         // Save collection handle to local storage
         localStorage.setItem('handle', window.COLLECTION_HANDLE); 
-
-        $('.collection-image-grid ').on('click', ('a[data-product-link], a[data-variant-swatch]'), function(event) {
+        // Product
+        $('.collection-image-grid ').on('click', ('a[data-product-link]'), function(event) {
+            event.preventDefault();
+            $this = $(this);
+            const buildLink = $this.attr('href') + `&main=${MAIN}&childlink=${TITLE}&title=${$this.data('title')}`;
+            window.location.href = buildLink;
+        });
+        // Variant
+        $('.collection-image-grid ').on('click', ('a[data-variant-swatch]'), function(event) {
             event.preventDefault();
             $this = $(this);
             const buildLink = $this.attr('href') + `&main=${MAIN}&childlink=${TITLE}&title=${$this.data('title')}`;
