--- a/snippets/media.liquid
+++ b/snippets/media.liquid
@@ -35,7 +35,9 @@ tabindex="-1">
       <!-- Mod: john - product-image -->
       <img class="mfp-image lazyload {{ img_id_class }}"
         src="{{ media | img_url: '300x300' }}"
+        {%comment%}
         data-src="{{ img_url }}"
+        {%endcomment%}
         data-widths="[180, 360, 590, 720, 900, 1080, 1296, 1512, 1728, 2048]"
         data-aspectratio="{{ media.aspect_ratio }}"
         data-sizes="auto"
