--- a/snippets/engraving-icons-texts.liquid
+++ b/snippets/engraving-icons-texts.liquid
@@ -57,6 +57,7 @@
         <!-- Options -->
         <input type="radio"
         value="icon2"
+        data-variant-image=""
         name="personalization-icons"
         class="single-option-selector__radio-personalization"
         id="ProductSelect-option-icon-2">
@@ -68,6 +69,7 @@
         <!-- Options -->
         <input type="radio"
         value="icon3"
+        data-variant-image=""
         name="personalization-icons"
         class="single-option-selector__radio-personalization"
         id="ProductSelect-option-icon-3">
@@ -79,6 +81,7 @@
         <!-- Options -->
         <input type="radio"
         value="icon4"
+        data-variant-image=""
         name="personalization-icons"
         class="single-option-selector__radio-personalization"
         id="ProductSelect-option-icon-4">
@@ -90,6 +93,7 @@
         <!-- Options -->
         <input type="radio"
         value="icon5"
+        data-variant-image=""
         name="personalization-icons"
         class="single-option-selector__radio-personalization"
         id="ProductSelect-option-icon-5">
@@ -101,6 +105,7 @@
         <!-- Options -->
         <input type="radio"
         value="icon6"
+        data-variant-image=""
         name="personalization-icons"
         class="single-option-selector__radio-personalization"
         id="ProductSelect-option-icon-6">
